# lightweight-communication-library

./: CMakeLists.txt  README.md  hardwareSerial.h  main.cpp  package.xml  serial.h
serial_test/test/: CMakeLists.txt  driver.h  main.cpp  serial.h
serial_test/test/msgs/arbotix_msgs/: Analog.h
serial_test/test/msgs/aruco_mapping/: ArucoMarker.h
serial_test/test/msgs/cob_perception_msgs/: ColorDepthImage.h  ColorDepthImageArray.h  Detection.h  People.h  Person.h  PositionMeasurement.h  Rect.h
serial_test/test/msgs/concert_msgs/: ConcertClient.h  ConcertClients.h
serial_test/test/msgs/grasping_msgs/: FindGraspableObjectsAction.h  FindGraspableObjectsActionFeedback.h  FindGraspableObjectsFeedback.h  FindGraspableObjectsResult.h  GraspPlanningAction.h  GraspPlanningActionFeedback.h  GraspPlanningActionGoal.h  GraspPlanningGoal.h  GraspPlanningResult.h  GraspableObject.h
serial_test/test/msgs/manipulation_msgs/: Grasp.h
serial_test/test/msgs/mongodb_store_msgs/: MoveEntriesActionFeedback.h  MoveEntriesActionGoal.h  MoveEntriesActionResult.h  MoveEntriesFeedback.h  MoveEntriesGoal.h  SerialisedMessage.h
serial_test/test/msgs/moveit_simple_grasps/: GenerateGraspsAction.h  GenerateGraspsActionGoal.h  GenerateGraspsFeedback.h  GenerateGraspsResult.h
serial_test/test/msgs/pal_behaviour_msgs/: BehaviourEvent.h  BehaviourTaskAction.h  BehaviourTaskActionFeedback.h  BehaviourTaskActionGoal.h  BehaviourTaskActionResult.h  PresentationActionGoal.h  PresentationGoal.h  (+1 more)
serial_test/test/serial/: duration.cpp  msg.h  node_handle.h  node_handle.h.autosave  subscriber.h
(+290 files in other folders)
